# Decision-Tree-and-Glass-Data

./: altcoin-qt.pro
altcoin_gpu_miner/: 01-cgminer.rules  ALTMiner.c  API-README  API.java  COPYING  GPU-README  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  SCRYPT-README  aclocal.m4  adl.c  adl.h  adl_functions.h  api-example.c  api-example.php  api.c  bench_block.h  buildit.sh  c++defs.h  cleanup.sh  compat.h  compile  config.h  config.h.in~  config.status  config.sub  configure  configure.ac  depcomp  diablo130302.cl  diakgcn121016.cl  driver-avalon.c  driver-avalon.h  driver-bflsc.c  driver-bflsc.h  driver-bitforce.c  (+38 more)
altcoin_gpu_miner/.deps/: ALTMiner-adl.Po  ALTMiner-findnonce.Po  ALTMiner-logging.Po  ALTMiner-scrypt.Po  ALTMiner-sha2.Po  ALTMiner-util.Po  cgminer-adl.Po  cgminer-api.Po  cgminer-cgminer-vertcoin.Po  cgminer-cgminer.Po  cgminer-driver-opencl.Po  cgminer-findnonce.Po  cgminer-logging.Po  cgminer-ocl.Po  cgminer-scrypt.Po  cgminer-sha2.Po  cgminer-util.Po  vertminer-adl.Po  vertminer-api.Po  vertminer-driver-modminer.Po  vertminer-driver-opencl.Po  vertminer-logging.Po  vertminer-ocl.Po  vertminer-scrypt.Po  vertminer-sha2.Po  vertminer-util.Po  vertminer-vertminer.Po
altcoin_gpu_miner/ADL_SDK/: adl_defines.h  adl_sdk.h  adl_structures.h
altcoin_gpu_miner/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
altcoin_gpu_miner/ccan/: Makefile  Makefile.in
altcoin_gpu_miner/ccan/opt/: helpers.c  opt.c  opt.h  parse.c  private.h
altcoin_gpu_miner/ccan/typesafe_cb/: typesafe_cb.h
altcoin_gpu_miner/compat/: Makefile  Makefile.in
altcoin_gpu_miner/compat/jansson-2.5/: CHANGES  Makefile  Makefile.in  aclocal.m4  config.guess  config.h  config.status  configure  depcomp  install-sh  jansson.pc  jansson.pc.in  libtool  ltmain.sh  (+1 more)
altcoin_gpu_miner/compat/libusb-1.0/: COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  PORTING  TODO  aclocal.m4  config.h.in  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing
altcoin_gpu_miner/compat/libusb-1.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
altcoin_gpu_miner/compat/libusb-1.0/libusb/: Makefile.in  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb-1.0.def  libusb.h  libusbi.h  sync.c  version.h
altcoin_gpu_miner/compat/libusb-1.0/libusb/os/: darwin_usb.c  darwin_usb.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  openbsd_usb.c  poll_windows.c  poll_windows.h  threads_posix.c  threads_windows.c  threads_windows.h  windows_usb.c  windows_usb.h
altcoin_gpu_miner/compat/libusb-1.0/m4/: libtool.m4  ltoptions.m4  lt~obsolete.m4
altcoin_gpu_miner/lib/: Makefile  Makefile.am  Makefile.in  arg-nonnull.h  c++defs.h  memchr.c  memmem.c  sigaction.c  signal.h  signal.in.h  sigprocmask.c  stdint.in.h  str-two-way.h  string.h  string.in.h  warn-on-use.h
altcoin_gpu_miner/m4/: extensions.m4  gnulib-cache.m4  gnulib-common.m4  gnulib-comp.m4  include_next.m4  libtool.m4  longlong.m4  ltoptions.m4  ltversion.m4  lt~obsolete.m4  memchr.m4  memmem.m4  mmap-anon.m4  onceonly.m4  signalblocking.m4  stdint.m4  string_h.m4
contrib/: altcoind.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/debian/: altcoin-qt.desktop  altcoind.bash-completion  altcoind.examples  altcoind.lintian-overrides  changelog  copyright  gbp.conf  rules
contrib/gitian-descriptors/: README  gitian-win32.yml  gitian.yml
contrib/gitian-downloader/: win32-download-config
contrib/macdeploy/: fancy.plist  macdeployqtplus
contrib/pyminer/: pyminer.py
doc/: Doxyfile  README  Tor.txt  assets-attribution.txt  build-msw.txt  build-unix.txt  readme-qt.rst  release-process.txt  translation_process.md  unit-tests.txt
share/: setup.nsi  ui.rc
share/pixmaps/: altcoin32.xpm  altcoin80.xpm
share/qt/: make_spinner.py  make_windows_icon.sh
src/: addrman.cpp  addrman.h  altcoinrpc.cpp  altcoinrpc.h  base58.h  bignum.h  checkpoints.cpp  crypter.cpp  crypter.h  db.cpp  db.h  init.cpp  irc.cpp  irc.h  key.cpp  key.h  keystore.cpp  keystore.h  main.cpp  main.h  makefile.mingw  makefile.unix  net.cpp  net.h  netbase.cpp  netbase.h  noui.cpp  protocol.cpp  protocol.h  rpcdump.cpp  rpcnet.cpp  rpcrawtransaction.cpp  script.cpp  script.h  scrypt-sse2.cpp  scrypt.cpp  serialize.h  strlcpy.h  sync.cpp  sync.h  (+9 more)
src/json/: json_spirit_reader.cpp  json_spirit_stream_reader.h  json_spirit_value.h  json_spirit_writer_template.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  altcoin.cpp  altcoin.qrc  altcoinaddressvalidator.h  altcoinamountfield.cpp  altcoinamountfield.h  altcoingui.cpp  altcoingui.h  altcoinstrings.cpp  altcoinunits.cpp  altcoinunits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.h  macdockiconhandler.mm  miningpage.cpp  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  qrcodedialog.cpp  qtipcserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  signverifymessagedialog.h  transactiondesc.cpp  transactionrecord.cpp  transactionrecord.h  (+5 more)
src/test/: DoS_tests.cpp  README  base58_tests.cpp  getarg_tests.cpp  key_tests.cpp  miner_tests.cpp  mruset_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  transaction_tests.cpp  util_tests.cpp  wallet_tests.cpp
(+95 files in other folders)
